--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
-    "vite-plugin-electron": "^0.4.5",
+    "vite-plugin-electron": "^0.5.0",
+    "vite-plugin-electron-renderer": "^0.10.1",
     "vue-tsc": "^0.34.7"
   },
   "build": {
