--- a/package.json
+++ b/package.json
@@ -1,72 +1,30 @@
 {
-  "name": "my-vue-app",
-  "private": true,
-  "version": "0.0.1",
-  "main": "dist/electron/index.js",
+  "name": "electron-vue-template",
+  "version": "0.1.0",
+  "description": "A minimal Electron + Vue application",
+  "main": "build/main/main.js",
   "scripts": {
-    "dev": "chcp 65001 && vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder --config",
-    "preview": "vite preview"
+    "dev": "node scripts/dev-server.js",
+    "build": "node scripts/build.js && electron-builder",
+    "build:win": "node scripts/build.js && electron-builder --win",
+    "build:mac": "node scripts/build.js && electron-builder --mac",
+    "build:linux": "node scripts/build.js && electron-builder --linux"
   },
-  "dependencies": {
-    "vue": "^3.2.25",
-    "vue-router": "^4.0.15"
+  "repository": "https://github.com/deluze/electron-vue-template",
+  "author": {
+    "name": "Deluze",
+    "url": "https://github.com/Deluze"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vueuse/electron": "^8.5.0",
-    "electron": "^19.0.0",
-    "electron-builder": "^23.0.3",
-    "electron-devtools-installer": "^3.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vite-plugin-electron": "^0.5.0",
-    "vite-plugin-electron-renderer": "^0.10.1",
-    "vue-tsc": "^0.34.7"
+    "@vitejs/plugin-vue": "^4.0.0",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
+    "electron": "^24.0.0",
+    "electron-builder": "^24.2.1",
+    "typescript": "^4.8.4",
+    "vite": "^4.1.1"
   },
-  "build": {
-    "appId": "com.smallpig.desktop",
-    "productName": "tjxTest",
-    "asar": true,
-    "copyright": "Copyright © 2022 tjxTest",
-    "directories": {
-      "output": "release/${version}"
-    },
-    "files": [
-      "dist"
-    ],
-    "mac": {
-      "artifactName": "${productName}_${version}.${ext}",
-      "target": [
-        "dmg"
-      ]
-    },
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "artifactName": "${productName}_${version}.${ext}"
-    },
-    "nsis": {
-      "oneClick": false,
-      "perMachine": false,
-      "allowToChangeInstallationDirectory": true,
-      "deleteAppDataOnUninstall": false
-    },
-    "publish": [
-      {
-        "provider": "generic",
-        "url": "http://127.0.0.1:8080"
-      }
-    ],
-    "releaseInfo": {
-      "releaseNotes": "版本更新的具体内容"
-    }
+  "dependencies": {
+    "vue": "^3.2.47"
   }
 }
