--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "vite": "^4.1.1"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "scss": "^0.2.4",
+    "vue": "^3.2.47",
+    "vuetify": "^3.3.3"
   }
 }
